syntax="proto3";

option go_package = "grpc.health.v1";

message HelloRequest {
    string hello = 1;
}

message HelloResponse {
    string greet = 1;
}

service GreetService {
    rpc Hello(HelloRequest) returns(stream HelloResponse) {};
}